--- a/cdc.project.cloudPushNotification/cdc.cloudPushNotification.service.cdp/appsettings.json
+++ b/cdc.project.cloudPushNotification/cdc.cloudPushNotification.service.cdp/appsettings.json
@@ -5,5 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "Keycloak": {
+    "CookieName": "keycloak.cookie.role",
+    "ServerRealm": "http://localhost:8082/realms/api-role-lab",
+    "Metadata": "http://localhost:8082/realms/api-role-lab/.well-known/openid-configuration",
+    "ClientId": "admin-rest-client",
+    "ClientSecret": "FJ0LErju9eRJsu4tZMXiOCrq2pfh5AZt",
+    "TokenExchange": "http://localhost:8082/realms/api-role-lab/protocol/openid-connect/token",
+    "Audience": "account",
+    "RequireHttpsMetadata": "false",
+    "SaveTokens": "true",
+    "ResourceTag": "resource_access",
+    "RoleTag": "roles"
+  },
+
   "AllowedHosts": "*"
 }
