--- a/cdc.project.cloudPushNotification/pushNotification.service.cdp/appsettings.json
+++ b/cdc.project.cloudPushNotification/pushNotification.service.cdp/appsettings.json
@@ -6,6 +6,13 @@
     }
   },
 
+  "CloudConfig": {
+    "ProjectId": "analytical-park-412106", // 替換成你的GCP專案ID
+    "TopicId": "send_message_done", // 替換成你的Pub/Sub主題ID
+    "SubscriptionId": "send_message_done-sub" // 替換成你的Pub/Sub訂閱ID
+  },
+
+
   "Keycloak": {
     "CookieName": "keycloak.cookie.role",
     "ServerRealm": "http://localhost:8082/realms/api-role-lab",
