--- a/cdc.project.cloudPushNotification/pushNotification.service.cdp/pushNotification.service.cdp.csproj
+++ b/cdc.project.cloudPushNotification/pushNotification.service.cdp/pushNotification.service.cdp.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Cloud.PubSub.V1" Version="3.9.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
