--- a/cdc.project.cloudPushNotification/pushNotification.service.cdp/appsettings.json
+++ b/cdc.project.cloudPushNotification/pushNotification.service.cdp/appsettings.json
@@ -13,17 +13,20 @@
   },
 
   "Keycloak": {
-    "CookieName": "keycloak.cookie.role",
-    "ServerRealm": "http://localhost:8082/realms/api-role-lab",
-    "Metadata": "http://localhost:8082/realms/api-role-lab/.well-known/openid-configuration",
+
+    "RootURL": "http://localhost:8082",
+    "Realm": "api-role-lab",
+
+    "GrantType": "client_credentials",
     "ClientId": "admin-rest-client",
     "ClientSecret": "FJ0LErju9eRJsu4tZMXiOCrq2pfh5AZt",
-    "TokenExchange": "http://localhost:8082/realms/api-role-lab/protocol/openid-connect/token",
-    "Audience": "account",
-    "RequireHttpsMetadata": "false",
-    "SaveTokens": "true",
-    "ResourceTag": "resource_access",
-    "RoleTag": "roles"
+
+    // Keycloak Endpoint
+    "POSTToken": "protocol/openid-connect/token",
+    "Metadata": ".well-known/openid-configuration",
+    "TokenExchange": "protocol/openid-connect/token",
+
+    "SaveTokens": "true"
   },
 
   "AllowedHosts": "*"
