--- a/cdc.project.cloudPushNotification/pushNotification.service.cdp/pushNotification.service.cdp.csproj
+++ b/cdc.project.cloudPushNotification/pushNotification.service.cdp/pushNotification.service.cdp.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Google.Cloud.PubSub.V1" Version="3.9.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
