--- a/cdc.project.cloudPushNotification/pushNotification.service.cdp/appsettings.json
+++ b/cdc.project.cloudPushNotification/pushNotification.service.cdp/appsettings.json
@@ -22,6 +22,7 @@
     "ClientSecret": "FJ0LErju9eRJsu4tZMXiOCrq2pfh5AZt",
 
     // Keycloak Endpoint
+    "CallbackPath": "/signin-oidc",
     "POSTToken": "protocol/openid-connect/token",
     "Metadata": ".well-known/openid-configuration",
     "TokenExchange": "protocol/openid-connect/token",
