--- a/cdc.project.cloudPushNotification/pushNotification.service.cdp/appsettings.json
+++ b/cdc.project.cloudPushNotification/pushNotification.service.cdp/appsettings.json
@@ -12,6 +12,8 @@
     "SubscriptionId": "send_message_done-sub" // 替換成你的Pub/Sub訂閱ID
   },
 
+  "ServiceEndpoint":"",
+
   "Keycloak": {
 
     "RootURL": "http://localhost:8082",
